# crayfish

./: '  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crayfish/: Cargo.toml
crayfish-examples/: Cargo.toml
crayfish-examples/examples/: .basic.rs.swo  .quick_sort.rs.swo  basic.rs  basic_collective.rs  basic_gen.rs  hello_world.rs  kmer_counting.rs  place_local.rs  quick_sort.rs  test_message.rs
crayfish-macros/: Cargo.toml
crayfish-macros/src/: args.rs  attr.rs  func.rs  lib.rs  utils.rs
crayfish-macros/tests/: all.rs  args_ok.rs  expand_finish.rs  expand_func.rs
crayfish-macros/tests/trybuild/: args_err.rs  args_err.stderr  args_ok.rs  main_no_async.rs  ret_infer_err.stderr
crayfish-test/build-test/build-ibv/: Cargo.toml
crayfish-test/build-test/build-ibv/src/: main.rs
crayfish-test/build-test/build-mpi/: Cargo.toml
crayfish-test/macros/: Cargo.toml
crayfish-test/macros/tests/: expand_args.rs  expand_finish.rs  main_args.rs  main_empty.rs
crayfish-test/macros/tests/trybuild/: bad_finish.rs  bad_finish.stderr  main_no_async.stderr  ret_infer_err.rs  ret_infer_err.stderr
crayfish-test/trace-test/: Cargo.toml
crayfish-test/trace-test/src/: main.rs
crayfish-trace-macros/: Cargo.toml
crayfish-trace-macros/src/: lib.rs
crayfish/src/: activity.rs  args.rs  collective.rs  essence.rs  executor.rs  finish.rs  global_id.rs  lib.rs  logging.rs  meta_data.rs  network.rs  place.rs  runtime.rs  runtime_meta.rs  serialization.rs  shared.rs  tmp.rs  trace.rs  utils.rs
crayfish/src/gasnet/: mod.rs
examples/: basic.rs  hello_world.rs  quick_sort.rs  test_tokio.rs
gex-sys/: Cargo.toml  build.rs
gex-sys/examples/: test.rs
gex-sys/gex_sys_build_parse_mak/: Cargo.toml
gex-sys/parse_mak/: Cargo.toml
gex-sys/parse_mak/test/: sample.mak
gex-sys/src/: gasnet_wrapper.c  gasnet_wrapper.h  lib.rs
src/: activity.rs  essence.rs  finish.rs  global_id.rs  lib.rs  logging.rs  meta_data.rs  network.rs  place.rs  runtime.rs  runtime_meta.rs  tmp.rs
src/gasnet/: mod.rs
