[package]
name = "rust-apgas"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
crossbeam = "0.8"
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
gex-sys = { path = "gex-sys", version = "0.1.0"}

[dependencies.async-std]
version = "1.7.0"
default-features = false
features = ["std"]

[lib]

[[bin]]
name = "hello_world"
path = "examples/hello_world.rs"
