[package]
name = "rust-apgas"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features= ["colored"] }
chrono = "0.4"
crossbeam = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
gex-sys = { path = "gex-sys", version = "0.1.0"}
lazy_static = "1.4.0"
once_cell = "1.7.2"
libc = "0.2.93"
signal-hook = "0.3.8"
rustc-hash = "1.1.0"
bincode = "1.3.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
num_cpus = "1.13.0"

[dependencies.async-std]
version = "1.7.0"
default-features = false
features = ["std"]

[dev-dependencies]
rand = { version = "0.8", features = ["std_rng"]}

[lib]

[[bin]]
name = "hello_world"
path = "examples/hello_world.rs"
