[package]
name = "crayfish-examples"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
crayfish = {path = "../crayfish", features = ["trace"]}
crossbeam = "0.8"
futures = "0.3"
rand = { version = "0.8", features = ["std_rng"]}
log = "0.4"
