[package]
name = "crayfish-macros"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
quote = "1.0"
syn = "1.0.72"
proc-macro2 = "1.0.26"

[dev-dependencies]
trybuild = "1.0"
crayfish = { path = "../crayfish", version = "0.1.0"}
