[package]
name = "crayfish-macros"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Crayfish macros"
repository = "https://github.com/jaxonwang/crayfish"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version="1.0.72", features=["full"] }
proc-macro2 = "1.0.26"
