[package]
name = "crayfish"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features= ["colored"] }
chrono = "0.4"
crossbeam = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
gex-sys = { path = "../gex-sys", version = "0.1.0"}
once_cell = "1.7.2"
libc = "0.2.93"
rustc-hash = "1.1.0"
bincode = "1.3.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
num_cpus = "1.13.0"
bit-vec = "0.6.3"
inventory = "0.1"

[dev-dependencies]
rand = { version = "0.8", features = ["std_rng"]}

[lib]
