[package]
name = "crayfish"
version = "0.0.1"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "An APGAS programming framework"
repository = "https://github.com/jaxonwang/crayfish"
readme = "README.md"

[dependencies]
log = "0.4"
fern = { version = "0.6", features= ["colored"] }
chrono = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
gex-sys = { path = "../gex-sys", version = "0.1.0" }
crayfish-macros = { path = "../crayfish-macros", version = "0.1.0" }
crayfish-trace-macros = { path = "../crayfish-trace-macros", version = "0.1.0" }
once_cell = "1.7.2"
libc = "0.2.93"
rustc-hash = "1.1.0"
bincode = "1.3.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
bit-vec = "0.6.3"
inventory = "0.1"
parking_lot = "0.11"
sys-info = "0.9.1"

[dev-dependencies]
rand = { version = "0.8", features = ["std_rng"]}

[lib]

[features]
net-udp = ["gex-sys/udp"]
net-mpi = ["gex-sys/mpi"]
net-ibv = ["gex-sys/ibv"]
trace = ["crayfish-trace-macros/enabled"]
