[package]
name = "gex-sys"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"
description = "Binding to GASNet-EX"
build = "build.rs"
license = "BSD-3-Clause"

[dependencies]

[build-dependencies]
bindgen = { version="0.58.1", features=["runtime"], default-features = false}
cc = "1.0.67"
pkg-config = "0.3"

[features]
default = ["udp"]
udp = []
mpi = []
ibv = []
